# scribe-system

./: .gitignore  Cargo.toml  aws.sh  big.txt  big_sumcheck.txt  output.txt  server-setup.sh  small.txt  small_sumcheck.txt  srs.params  vanilla threads 1.txt  vanilla threads 16.txt  vanilla threads 2.txt  vanilla threads 32.txt  vanilla threads 4.txt  vanilla threads 64.txt  vanilla threads 8.txt
.github/workflows/: ci.yml
bench-lib/: Cargo.toml
bench-lib/src/: lib.rs
bench-utils/: Cargo.toml
bench-utils/example/: 1011144016.cachedata  halo2-prover.rs  hp-prover.rs  hp-setup.rs  prover.rs  run_bench.sh  run_benches.py  run_benchmarks.sh  run_provers.sh  run_with_cgroup.sh  sample.data  scribe-prover.rs  scribe-setup.rs  setup.rs
bench-utils/examples/: README.md  gemini-prover.rs  hp-prover.rs  monitor_cache.sh  plot_grid.sh  prover-benches.py  run_bench.sh  run_benches.py  scribe-prover.rs  scribe-setup.rs  sumcheck.rs  witness-synth.rs
bench-utils/src/: gemini.rs  halo2.rs  hp.rs  lib.rs  plonky2.rs  scribe.rs
benches/: file_vec.rs  iter.rs  mle.rs  serialize.rs
constraints/merkle_tree/: Cargo.toml
constraints/merkle_tree/src/: lib.rs  prelude.rs
constraints/merkle_tree/src/gadgets/: mod.rs  universal_merkle_tree.rs
constraints/relation/: Cargo.toml
constraints/relation/src/: constraint_system.rs  lib.rs
constraints/relation/src/gadgets/: arithmetic.rs  logic.rs  range.rs
constraints/relation/src/gadgets/ecc/: mod.rs
constraints/relation/src/gates/: mod.rs
constraints/rescue/: Cargo.toml
constraints/rescue/src/: commitment.rs  crhf.rs  lib.rs  prf.rs
constraints/rescue/src/gadgets/: commitment.rs  mod.rs  native.rs  prf.rs
constraints/rescue/src/rescue_constants/: mod.rs
espresso_benchmark/: vanilla threads 1.txt  vanilla threads 2.txt
example/: bench.rs  prover.rs  setup.rs
ios-prover/scribe/: Header.h  scribeApp.swift
ios-prover/scribe.xcodeproj/: project.pbxproj
ios-prover/scribe/scribe/: ContentView.swift  Header.h  Item.swift  TmpDir.swift
ios-prover/scribe/scribe.xcodeproj/: project.pbxproj
mle/: Cargo.toml
mle/benches/: mle.rs
mle/src/: eq_iter.rs  inner.rs  lexico_iter.rs  lib.rs  mle.rs  small_mle.rs  virtual_mle.rs  virtual_polynomial.rs
mobile-scribe/: FfiBenchUtils.h
mobile-scribe/mobile-scribe/: ContentView.swift  Item.swift  ScribeApp.swift  mobile_scribeApp.swift
mobile-scribe/mobile-scribe.xcodeproj/: project.pbxproj
relation/: Cargo.toml
relation/src/: constants.rs  constraint_system.rs
relation/src/gadgets/: arithmetic.rs  cmp.rs  logic.rs  mod.rs  range.rs
relation/src/gadgets/ecc/: conversion.rs  mod.rs
scribe-snark/: Cargo.toml
scribe-snark/benches/: iter.rs  mle.rs  serialize.rs  sumcheck.rs
scribe-snark/example/: run_bench.sh
scribe-snark/src/: stream_test_chart.py
scribe-snark/src/arithmetic/: mod.rs  util.rs  virtual_mle.rs  virtual_polynomial.rs
scribe-snark/src/pc/: errors.rs  mod.rs  prelude.rs
scribe-snark/src/pc/multilinear_kzg/: mod.rs  srs.rs
scribe-snark/src/pc/pst13/: batching.rs  mod.rs  srs.rs  util.rs
scribe-snark/src/piop/: errors.rs  structs.rs
scribe-snark/src/piop/perm_check/: mod.rs  util.rs
scribe-snark/src/piop/perm_check_original/: mod.rs  util.rs
scribe-snark/src/piop/prod_check/: mod.rs  util.rs
scribe-snark/src/piop/sum_check/: mod.rs  prover.rs  verifier.rs
scribe-snark/src/piop/zero_check/: mod.rs
scribe-snark/src/snark/: errors.rs  mock.rs  mod.rs  selectors.rs  snark.rs  structs.rs  utils.rs  witness.rs
scribe-snark/src/streams/: file_vec.rs  iterator.rs  serialize.rs
scribe-snark/src/streams/dense_mle/: eq_iter.rs  inner.rs  mod.rs
scribe-snark/src/streams/file_vec/: array_chunks.rs  backend.rs  into_iter.rs  iter.rs  iter_chunk_mapped.rs  macros.rs  test.rs
scribe-snark/src/streams/file_vec/backend/: default.rs  linux.rs
scribe-snark/src/streams/iterator/: array_chunks.rs  chain_many.rs  from_fn.rs  repeat.rs  take.rs  zip_many.rs
scribe-snark/src/transcript/: errors.rs
src/: error.rs  lib.rs  proof.rs  prover.rs  read_write.rs  space_prover.rs  stream_test_chart.py
src/arithmetic/: errors.rs  virtual_polynomial.rs
src/benches/: bench.rs  run_bench.sh
src/full_snark/: errors.rs  mock.rs  mod.rs  prelude.rs  selectors.rs  snark.rs  structs.rs  utils.rs  witness.rs
src/hyperplonk/: mod.rs  trace.txt
src/hyperplonk/arithmetic/: errors.rs  mod.rs  util.rs  virtual_polynomial.rs
src/hyperplonk/benches/: bench.rs  run_bench.sh
src/hyperplonk/full_snark/: custom_gate.rs  errors.rs  mock.rs  mod.rs  prelude.rs  selectors.rs  snark.rs  structs.rs  utils.rs  witness.rs
src/hyperplonk/pcs/: errors.rs  mod.rs  prelude.rs
src/hyperplonk/poly_iop/: errors.rs  mod.rs  prelude.rs  structs.rs
src/hyperplonk/transcript/: mod.rs
src/pc/: prelude.rs
src/pc/multilinear_kzg/: batching.rs  mod.rs  srs.rs  util.rs
src/pcs/: errors.rs  mod.rs  prelude.rs
src/pcs/multilinear_kzg/: batching.rs  mod.rs  srs.rs  util.rs
src/piop/: mod.rs  structs.rs
src/piop/perm_check/: mod.rs  util.rs
src/piop/perm_check_original/: mod.rs
src/piop/prod_check/: mod.rs  util.rs
src/piop/sum_check/: mod.rs  prover.rs
src/poly_iop/: errors.rs  prelude.rs
src/poly_iop/perm_check/: mod.rs  util.rs
src/poly_iop/perm_check_original/: mod.rs  util.rs
src/poly_iop/prod_check/: mod.rs  util.rs
src/snark/: errors.rs  mock.rs  mod.rs  prelude.rs  selectors.rs  snark.rs  structs.rs  utils.rs  witness.rs
src/streams/: file_vec.rs  iterator.rs  mod.rs  serialize.rs
src/streams/dense_mle/: mod.rs  (+2 more)
streams/: Cargo.toml
streams/benches/: file_vec.rs  iter.rs  serialize.rs
streams/src/: file_vec.rs  iterator.rs  lib.rs  serialize.rs
streams/src/file_vec/: array_chunks.rs  array_chunks_with_buf.rs  backend.rs  double_buffered.rs  into_iter.rs  iter.rs  iter_chunk_mapped.rs  iter_chunk_mapped_with_buf.rs  iter_with_buf.rs  macros.rs  test.rs
streams/src/file_vec/backend/: default.rs  linux.rs
streams/src/iterator/: array_chunks.rs  batched_map.rs  chain_many.rs  from_fn.rs  map.rs  repeat.rs  take.rs  zip.rs  zip_many.rs
(+35 files in other folders)
