[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version = "^0.4.0", default-features = false }
ark-ff = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-poly = { version = "^0.4.0", default-features = false }
ark-serialize = {version = "0.4.0", features = ["derive"]}
tempfile = "3.3.0"
merlin = "3.0.0"
smallvec = "1.6"
rayon = { version = "1.5.2", default-features = false, optional = true }
displaydoc = "0.2.0"
derivative = { version = "2", features = ["use_core"] }

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5" }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-test-curves = { version = "^0.4.0", features = ["bls12_381_curve", "ed_on_bls12_381"]}

[patch.crates-io]
# ark-ff = {git = "https://github.com/arkworks-rs/algebra"}
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra"}
ark-std = { git = "https://github.com/arkworks-rs/utils"}
ark-serialize = { git = "https://github.com/arkworks-rs/algebra"}
ark-serialize-derive = { git = "https://github.com/arkworks-rs/algebra"}

[profile.release]
debug-assertions = false

[features]
default = ["parallel"]
parallel = [ 
    "rayon",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel" 
]
print-trace = [ 
    "ark-std/print-trace" 
] 

[[bench]]
name = "hyperplonk-benches"
path = "src/hyperplonk/benches/bench.rs"
harness = false

[[bench]]
name = "file_vec"
path = "benches/file_vec.rs"
harness = false