[workspace]
members = [
    "bench-utils",
    "scribe-snark",
    "relation", 
    "streams", 
    "mle",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [ "scribe authors" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[workspace.metadata.release]
dependent-version = "fix"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
