[package]
name = "bench-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4" }
ark-bls12-381 = { version = "^0.4" }
ark-serialize = { version = "^0.4" }
ark-std = { version = "^0.4" }
scribe = { path = "../scribe-snark", parallel = true }
libc = { version = "^0.2.101" }
rayon = { version = "^1.5" }

[[example]]
name = "setup"
path = "example/setup.rs"

[[example]]
name = "prover"
path = "example/prover.rs"
