[package]
name = "bench-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4", features = ["parallel"] }
ark-bls12-381 = { version = "^0.4" }
ark-serialize = { version = "^0.4" }
ark-std = { version = "^0.4", features = ["parallel"] }
scribe = { path = "../scribe-snark", features = ["parallel"] }
libc = { version = "^0.2.101" }
rayon = { version = "^1.5" }
hp = { git = "https://github.com/EspressoSystems/hyperplonk/", package = "hyperplonk" }
hp-subroutines = { git = "https://github.com/EspressoSystems/hyperplonk/", package = "subroutines" }

[[example]]
name = "scribe-setup"
path = "example/scribe-setup.rs"

[[example]]
name = "scribe-prover"
path = "example/scribe-prover.rs"


[[example]]
name = "hp-setup"
path = "example/hp-setup.rs"

[[example]]
name = "hp-prover"
path = "example/hp-prover.rs"
