[package]
name = "bench-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4", features = ["parallel"] }
ark-ec = { version = "^0.4", features = ["parallel"] }
ark-bls12-381 = { version = "^0.4" }
ark-serialize = { version = "^0.4" }
ark-std = { version = "^0.4", features = ["parallel"] }
scribe = { path = "../scribe-snark" }
rayon = { version = "^1.5" }
jemallocator = { version = "0.5.0" }

# HyperPlonk
hp = { git = "https://github.com/EspressoSystems/hyperplonk/", package = "hyperplonk" }
hp-subroutines = { git = "https://github.com/EspressoSystems/hyperplonk/", package = "subroutines" }

# Gemini
ark-gemini = { git = "https://github.com/pratyush/gemini/", optional = true, features = [ "parallel" ] }

# Plonky2
plonky2 = { version = "0.2.2", optional = true }

# Halo2
halo2_proofs = { package = "halo2-axiom", version = "0.4.4", optional = true }
group = { version = "0.13", optional = true }
halo2_curves = { package = "halo2curves-axiom", version = "0.5.0", default-features = false, features = ["bits", "derive_serde"], optional = true }


# For iOS
libc = { version = "^0.2.101" }
rlimit = { version = "^0.10" }

[features]
print-trace = ["scribe/print-trace"]
gemini = ["ark-gemini"]
plonky2 = ["dep:plonky2"]
halo2 = [ "halo2_proofs", "group", "halo2_curves" ]

[lib]
crate-type = ["staticlib", "rlib"]

[[example]]
name = "scribe-setup"
path = "example/scribe-setup.rs"

[[example]]
name = "scribe-prover"
path = "example/scribe-prover.rs"

[[example]]
name = "hp-setup"
path = "example/hp-setup.rs"

[[example]]
name = "hp-prover"
path = "example/hp-prover.rs"

[[example]]
name = "gemini-prover"
path = "example/gemini-prover.rs"
required-features = ["gemini"]

[[example]]
name = "halo2-prover"
path = "example/halo2-prover.rs"
required-features = ["halo2"]


[[example]]
name = "plonky2-prover"
path = "example/plonky2-prover.rs"
required-features = ["plonky2"]
