[package]
name = "jf-relation"
description = "Jellyfish constraint system for PLONK"
version = "0.4.4"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-ff = { version = "^0.4", features = ["parallel"] }
ark-ec = { version = "^0.4", features = ["parallel"] }
ark-poly = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-serialize = { version = "^0.4" }
ark-std = { version = "^0.4" }
derivative = { version = "2", features = ["use_core"] }
displaydoc = "0.2.0"
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "^1.0"
itertools = { version = "0.13.0", default-features = false }
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
num-bigint = { version = "0.4.0", default-features = false }
rayon = { version = "1.5.0", optional = true }
scribe-streams = { path = "../streams" }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"

[features]
default = ["parallel"]
std = [ "ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std", 
        "ark-poly/std", "downcast-rs/std", "jf-utils/std", "num-bigint/std",
        ]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", 
            "jf-utils/parallel", "dep:rayon" ]
