[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
ark-ec = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-std = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-serialize = {version = "0.4.0", features = ["derive", "std"]}
tempfile = "3.3.0"
merlin = "3.0.0"
smallvec = "1.6"
rayon = { version = "1.5.2", default-features = false }
displaydoc = "0.2.0"
derivative = { version = "2", features = ["use_core"] }
libc = { version = "0.2.101" }


[target.'cfg(target_os = "linux")'.dependencies]
aligned-vec = { version = "0.6.1" }

[dev-dependencies]
ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
criterion = { version = "0.5" }

[features]
print-trace = [ "ark-std/print-trace" ] 

[[bench]]
name = "file_vec"
path = "benches/file_vec.rs"
harness = false

[[bench]]
name = "iter"
path = "benches/iter.rs"
harness = false

[[bench]]
name = "serialize"
path = "benches/serialize.rs"
harness = false

[[bench]]
name = "mle"
path = "benches/mle.rs"
harness = false
