[package]
name = "jf-merkle-tree"
version = "0.1.0"
description = "Various Merkle tree implementations."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }

scribe-streams = { path = "../../streams" }

derivative = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"] }

jf-relation = { version = "0.4.4", path = "../relation", optional = true }
jf-rescue = { version = "0.1.0", path = "../rescue" }
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
num-bigint = { workspace = true }
num-traits = { version = "0.2.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tagged-base64 = "0.4.0"


[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-std = { workspace = true, features = ["std"] }
bincode = "1.3"
criterion = "0.5.1"
sha2 = "0.10"

[[bench]]
name = "merkle_path"
harness = false

[features]
gadgets = [
    "jf-relation", "jf-rescue/gadgets",
]
