[package]
name = "jf-rescue"
version = "0.1.0"
description = "Rescue hash function implementation."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true }

ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ed-on-bls12-377 = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true}
ark-ed-on-bn254 = { workspace = true}

scribe-streams = { path = "../../streams" }

displaydoc = { workspace = true }
itertools = { workspace = true }
jf-relation = { path = "../relation", optional = true }
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-381-bandersnatch = "0.4.0"

[features]
gadgets = ["jf-relation"]
